Cambi de la linea del titulo a color morad

--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ body {
     font-size: 100px;
     font-weight: bolder;
     text-align: center;
-    border-bottom: 3px ridge red;
+    border-bottom: 3px ridge purple;
 }
 
 .title-paragraph {
